<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circularlayoutnw"
    android:orientation="vertical"
    tools:context=".activities.UserLoginActivity">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="103dp"
       android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/talhatrainning" />


    <EditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="8dp"
        android:textColor="@android:color/black"
        android:background="@drawable/text_edit_background"
        android:drawableLeft="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:shadowColor="@color/colorPrimaryalviB"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_edit_background"
        android:drawableLeft="@drawable/ic_lock"
        android:ems="10"
        android:drawablePadding="8dp"
        android:textColor="@android:color/black"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:textSize="14dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/keep_me" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/circularlayoutnw"
            android:text="@string/login"
            android:textSize="14dp"
            android:backgroundTint="#473c8b"
            android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/comID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textSize="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't have a account?"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:textStyle="italic"/>


        <Button
            android:id="@+id/btn_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:onClick="createAccount"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:background="@drawable/background_signin"
            android:text="@string/create_account" />

    </LinearLayout>

</LinearLayout>