<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activities.UserAuthenticationActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_your_app"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/myLanguage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:src="@drawable/talhatrainning" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_marginLeft="25dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="@drawable/background_signin"
        android:text="@string/sign_in" />
</LinearLayout>